# derivkit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  contributing.html  derivkit.adaptive.batch_eval.html  derivkit.adaptive.diagnostics.html  derivkit.adaptive.estimator.html  derivkit.adaptive.fallback.html  derivkit.adaptive.fit_core.html  derivkit.adaptive.grid.html  derivkit.adaptive.html  derivkit.adaptive.offsets.html  derivkit.adaptive.validate.html  derivkit.adaptive.weights.html  derivkit.adaptive_fit.html  derivkit.derivative_kit.html  derivkit.finite_difference.html  derivkit.forecast_kit.html  derivkit.forecasting.calculus.html  derivkit.forecasting.expansions.html  derivkit.forecasting.html  derivkit.forecasting.likelihoods.html  derivkit.html  derivkit.kit.html  derivkit.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  something_idiotic.ipynb
.doctrees/: contributing.doctree  derivkit.adaptive.batch_eval.doctree  derivkit.adaptive.diagnostics.doctree  derivkit.adaptive.doctree  derivkit.adaptive.estimator.doctree  derivkit.adaptive.fallback.doctree  derivkit.adaptive.fit_core.doctree  derivkit.adaptive.grid.doctree  derivkit.adaptive.offsets.doctree  derivkit.adaptive.validate.doctree  derivkit.adaptive.weights.doctree  derivkit.adaptive_fit.doctree  derivkit.derivative_kit.doctree  derivkit.doctree  derivkit.finite_difference.doctree  derivkit.forecast_kit.doctree  derivkit.forecasting.calculus.doctree  derivkit.forecasting.doctree  derivkit.forecasting.expansions.doctree  derivkit.forecasting.likelihoods.doctree  derivkit.kit.doctree  derivkit.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: contributing.rst.txt  derivkit.adaptive.diagnostics.rst.txt  derivkit.adaptive.grid.rst.txt  derivkit.adaptive.offsets.rst.txt  derivkit.adaptive_fit.rst.txt  derivkit.finite_difference.rst.txt  derivkit.forecasting.expansions.rst.txt  index.rst.txt  modules.rst.txt
binder/: environment.yml
derivkit/: __init__.py  adaptive_fit.py  derivative_plotter.py  finite_difference.py  kit.py  utils.py
derivkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
derivkit/plotutils/: plot_kit.py  plot_style.py
derivkit/tests/: test_derivkit.py
docs/: Makefile  conf.py  derivkit.adaptive.batch_eval.rst  derivkit.adaptive.estimator.rst  derivkit.adaptive.fallback.rst  derivkit.adaptive.fit_core.rst  derivkit.adaptive.rst  derivkit.adaptive.validate.rst  derivkit.adaptive.weights.rst  derivkit.derivative_kit.rst  derivkit.forecast_kit.rst  derivkit.forecasting.calculus.rst  derivkit.forecasting.likelihoods.rst  derivkit.forecasting.rst  derivkit.kit.rst  derivkit.likelihood_expansion.rst  derivkit.rst  derivkit.utils.rst  index.rst
forecastkit/: forecast_examples.ipynb  forecast_kit.py
notebooks/: 01_example_derivatives.ipynb  02_method_testing.ipynb  02_simple_demo.ipynb  03_simple_demo_derivatives.ipynb  03_standard_fn_demo.ipynb  04_blowup_fn_demo.ipynb  04_simple_demo_dali.ipynb  05_standard_fn_demo.ipynb  05_tangent_residual_analysis.ipynb  06_adaptive_timing_sweep.ipynb  06_blowup_fn_demo.ipynb  07_forecast_demo.ipynb  08_DALI_plot.ipynb  functions_dict.py
notebooks/utils/: functions.py
src/derivkit/: __init__.py  adaptive_fit.py  adaptive_internal.py  derivative_kit.py  finite_difference.py  forecast_kit.py  kit.py  likelihood_expansion.py  utils.py  utils_old.py
src/derivkit/adaptive/: __init__.py  batch_eval.py  diagnostics.py  estimator.py  fallback.py  fit_core.py  grid.py  offsets.py  validate.py  weights.py
src/derivkit/forecasting/: __init__.py  calculus.py  expansions.py  likelihoods.py
src/derivkit/plotutils/: plot_helpers.py  plot_kit.py  plot_style.py
tests/: test_adaptive_fallback.py  test_adaptive_fit.py  test_derivative.py  test_derivkit.py  test_finite_difference.py  test_forecastkit.py  test_likelihood_expansion.py
