[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "derivkit"
version = "0.0.1"
dependencies = [
  "matplotlib",
  "numdifftools",
  "numpy",
  "multiprocess"
]
authors = [
  { name="Nikolina Šarčević", email="nikolina.sarcevic@gmail.com" },
  { name="Matthijs van der Wild", email="matthijs@vanderwild.com" },
  { name="Cynthia Trendafilova", email="cyntrendafilova@gmail.com" },
  { name="Bastien Carreres", email="bastien.carreres@duke.edu" },
]
description = "A robust toolkit for stable numerical derivatives"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.optional-dependencies]
"test" = [
    "pytest",
    "tox"
]
"docs" = [
    "sphinx",
    "furo",
]
"lint" = [
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"] # enforce `line-too-long` rule

[tool.tox]
requires = ["tox>=4.22"]
envlist = [
  "py39",
  "py310",
  "py311",
  "py312",
  "py313",
]

[tool.tox.env_run_base]
change_dir = "{tox_root}/tests"
allowlist_externals = ["pytest"]
commands = [
    ["pytest"],
]

[tool.tox.env_run_base.setenv]
PIP_CACHE_DIR = "{tox_root}/.cache/pip"
